# webauth

./: Cargo.toml  README.md  build.ps1  register.reg
provider/: Cargo.toml
provider/src/: CredentialProvider.rs  CredentialProviderCredential.rs  lib.rs
service/: Cargo.toml
service/src/: main.rs
src/: CredentialProvider.rs  CredentialProviderCredential.rs  lib.rs
