[package]
name = "webauth-provider"
version = "0.1.0"
edition = "2024"

[lib]
name = "webauth"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.62.0", features = [
    "Wdk_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_System_IO",
] }
windows-core = "0.62.0"
